# dataset-semantic-search

./: .gitignore  CATALOG_GUIDE.md  Dockerfile  LICENSE  README.md  hf_spaces_readme.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-hf.yml
notebooks/: explore.ipynb
scripts/: build_index.py
src/catalog_search/: __init__.py  api.py  bm25.py  data_catalog.py  embedder.py  index.py  models.py  search.py
tests/: conftest.py  test_bm25.py  test_data_catalog.py  test_embedder.py  test_evaluation.py  test_index.py  test_models.py  test_search.py
ui/: index.html
