[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalog-search"
version = "0.1.0"
description = "Semantic search for health dataset catalogs using sentence-transformers + FAISS + BM25"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=2.7",
    "faiss-cpu>=1.8",
    "rank-bm25>=0.2.2",
    "pydantic>=2.0",
    "numpy>=1.26",
    "tqdm>=4.66",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (model download / large index build)",
    "evaluation: end-to-end relevance tests",
]

[tool.coverage.run]
source = ["src/catalog_search"]
